Fixes little gap between qrcode and card body by adding line-height: 0 to the .card conatiner

--- a/qr-code-component-main/qr-code-component-main/styles.css
+++ b/qr-code-component-main/qr-code-component-main/styles.css
@@ -26,6 +26,7 @@ body {
     padding: 1em 1em 2.5em;
     height: auto;
     width: auto;
+    line-height: 0;
 }
 
 .card img {
